# ovis-framework

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: gpu.rs  id_storage.rs  job.rs  lib.rs  resource.rs  result.rs  scene.rs  scheduler.rs  shader.wgsl
core/src/resource/: id_mapped_slice_storage.rs  id_mapped_storage.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: id_storage.rs  instance.rs  job.rs  lib.rs  resource.rs  scene.rs  scheduler.rs  shader.wgsl  versioned_index_id.rs
src/runtime/: mod.rs
