[package]
name = "ovis-runtime"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ovis-core = { path = "core", version = "0.0.1", registry = "ovis-localhost" }
ovis-macros = { path = "macros", version = "0.0.1", registry = "ovis-localhost" }
pollster = "0.3.0"
env_logger = "0.10.0"
glam = "0.24.1"
