[package]
name = "ovis-macros"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
ovis-core = { path = "../core", version = "0.0.1", registry = "ovis-localhost" }
syn = "2.0.22"
